add memes, make them draggable
havent figured out yet how to make them visible after being dragged onto canvas

--- a/src/video_Editor/css/meme_data.css
+++ b/src/video_Editor/css/meme_data.css
@@ -2,4 +2,13 @@
     width: 30%;
     max-width: 30%;
     float: right;
+    display: flex;
+    flex-direction: column;
 }
+
+.equal-size {
+    width: 150px;
+    height: 150px;
+}
+
+
