--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -129,3 +129,39 @@ body {
     justify-content: center;
     text-align: center;
 }
+
+.wrapper {
+    width: 60%;
+    height: 56.25%;
+    float: left;
+    position: relative;
+}
+
+.file-select {
+    padding: 50px;
+}
+
+.file-selected {
+    display: block;
+}
+
+.file-not-selected {
+    display: none;
+}
+
+/*<div className={`testing-h1 ${fileSelected ? 'file-selected': 'file-not-selected'} bg-color`}><h1>HALLO TEST</h1></div>
+*/
+.canvas-style {
+    z-index: 2;
+    position: absolute;
+}
+
+.video-styles {
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+.edit_video {
+    padding-top: 20px;
+}
