--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,18 +15,78 @@ body {
     float: left;
 }
 
-.wrapperForMemes {
+.wrapper-memes {
     width: 30%;
     max-width: 30%;
     float: right;
     display: flex;
     flex-direction: column;
+    border: 2px solid #ccc; /* Add a solid border */
+    border-radius: 10px; /* Add rounded corners */
+    padding: 50px; /* Add padding */
+    align-items: center;
+    justify-content: center;
+    overflow-y: scroll;
+    max-height: 500px;
 }
+
 
 .equal-size {
     width: 150px;
     height: 150px;
 }
+
+.wrapper-video {
+    width: 60%;
+    height: 56.25%;
+    float: left;
+    position: relative;
+}
+
+.file-select {
+    padding: 50px;
+}
+
+.file-selected {
+    display: block;
+}
+
+.file-not-selected {
+    display: none;
+}
+
+.canvas-style {
+    z-index: 2;
+    position: absolute;
+}
+
+.video-styles {
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+.edit_video {
+    padding-top: 20px;
+}
+
+.progress-bar-style {
+    height: 10px;
+    background-color: #444444;
+    position: relative;
+    bottom: 10px;
+    left: 0;
+    cursor: pointer;
+}
+
+label {
+    padding: 100px;
+}
+
+img {
+    padding: 20px
+}
+
 
 
 /**The following are premade and i didnt modify them or use them yet*/
@@ -128,51 +188,4 @@ body {
     margin: 1em;
     justify-content: center;
     text-align: center;
-}
-
-.wrapper {
-    width: 60%;
-    height: 56.25%;
-    float: left;
-    position: relative;
-}
-
-.file-select {
-    padding: 50px;
-}
-
-.file-selected {
-    display: block;
-}
-
-.file-not-selected {
-    display: none;
-}
-
-.canvas-style {
-    z-index: 2;
-    position: absolute;
-}
-
-.video-styles {
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-}
-
-.edit_video {
-    padding-top: 20px;
-}
-
-.progress-bar-style {
-    height: 10px;
-    background-color: #444444;
-    position: relative;
-    bottom: 10px;
-    left: 0;
-    cursor: pointer;
-}
-
-label {
-    padding: 100px;
 }
