--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -45,8 +45,18 @@ label {
     font-size: 5rem;
     margin: 0;
     color: #ffb9e4;
+    animation: light-reflection 1s linear infinite;
+    animation-direction: alternate;
 }
 
+@keyframes light-reflection {
+    from {
+        text-shadow: 0 0 0 #451eb5;
+    }
+    to {
+        text-shadow: 3px 0 0 #6b54ad;
+    }
+}
 
 .left-side {
     grid-column: 1 / 2; /* spans the first column */
