--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,7 +15,7 @@ h1 {
 body {
     padding-top: 50px;
     transition: background-color .3s ease, color .3s ease;
-    background-color: mintcream;
+    background-color: #f1ede2;
     padding-bottom: 100px;
 
 }
@@ -87,7 +87,7 @@ label {
     padding: 50px;
     align-items: center;
     justify-content: center;
-    overflow-y: scroll;
+    /*overflow-y: scroll;*/
     max-height: 500px;
     background-color: #fbfffd;
 }
