--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,15 +9,13 @@ h1 {
     align-self: center;
     text-align: center;
     color: #ff8fd1;
-
 }
 
 body {
     padding-top: 50px;
     transition: background-color .3s ease, color .3s ease;
-    background-color: #f1ede2;
+    background-color: mintcream;
     padding-bottom: 100px;
-
 }
 
 .grid-container {
