--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -128,20 +128,47 @@ label:hover {
     flex-wrap: wrap;
 }
 
+.cell {
+    max-width: 25%;
+    padding: 15px;
+}
 
 .wrapper-memes {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    display: flex;
+    flex-direction: row;
+    border: 4px solid #ffb9e4;
+    border-radius: 10px; /*  rounded corners */
+    max-height: 800px;
+    background-color: #fbfffd;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center; /*allows elements to wrap onto new lines when the container is not wide enough
+   */
+}
+
+
+.equal-size {
+    width: 100%;
+    height: 100%;
+}
+
+
+.wrapper-memes-no-scroll {
     display: flex;
     flex-direction: column;
-    border: 4px solid #ffb9e4;
+    border: 4px solid #fd7bce;
     border-radius: 10px; /*  rounded corners */
     align-items: center;
     justify-content: center;
-    /*overflow-y: scroll; */
-    max-height: 900px;
+    max-height: 800px;
     background-color: #fbfffd;
-    flex-wrap: wrap;
-    overflow: visible;
+
+    position: relative;
+
 }
+
 
 .react-tabs__tab-list {
     display: flex;
@@ -180,11 +207,6 @@ button:hover {
     background: #ff68c5;
 }
 
-.equal-size {
-    width: 150px;
-    height: 150px;
-}
-
 .wrapper-video {
     padding-top: 100px;
     width: 95%;
@@ -205,6 +227,10 @@ button:hover {
     display: none;
 }
 
+.stop-scrolling {
+    overflow: hidden;
+}
+
 .canvas-style {
     width: 100%;
     z-index: 2;
@@ -222,9 +248,6 @@ button:hover {
     padding-bottom: 15px;
 }
 
-img {
-    padding: 20px;
-}
 
 .img2 {
     padding-top: 1500px;
