--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -43,15 +43,6 @@ label:hover {
     background: #ff68c5;
 }
 
-
-.timeline {
-    width: 100%; /* Set the width of the element to fill its parent container */
-    height: 40px; /* Set the height of the element */
-    background-color: #ffc5e7; /* Set a background color for the element */
-    overflow: auto; /* Set the overflow property to 'auto' to enable scrolling */
-    position: relative; /* Set the position property to 'relative' */
-}
-
 .progress-line {
     position: absolute;
     top: 0;
@@ -71,7 +62,6 @@ label:hover {
     text-align: center;
 }
 
-
 .header-container {
     width: 100%;
     flex: 0 0 80px;
@@ -81,7 +71,7 @@ label:hover {
 }
 
 .header-container h1 {
-    font-size: 5rem;
+    font-size: 8rem;
     margin: 0;
     color: #ffb9e4;
     animation: light-reflection 1s linear infinite;
@@ -118,16 +108,6 @@ label:hover {
     float: left;
 }
 
-.gifs-container, .pngs-container {
-    padding-left: 50px;
-    padding-right: 50px;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    overflow-y: scroll;
-    flex-wrap: wrap;
-}
-
 .cell {
     max-width: 25%;
     padding: 15px;
@@ -144,35 +124,34 @@ label:hover {
     background-color: #fbfffd;
     align-items: center;
     flex-wrap: wrap;
-    justify-content: center; /*allows elements to wrap onto new lines when the container is not wide enough
-   */
+    justify-content: center; /*allows elements to wrap onto new lines when the container is not wide enough */
 }
 
+.gifs-container, .pngs-container {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    display: flex;
+    flex-direction: row;
+    border-top: 4px solid #ffb9e4;
+    border-radius: 10px; /*  rounded corners */
+    max-height: 800px;
+    background-color: #fbfffd;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center; /*allows elements to wrap onto new lines when the container is not wide enough */
+}
 
 .equal-size {
     width: 100%;
     height: 100%;
 }
 
-
-.wrapper-memes-no-scroll {
-    display: flex;
-    flex-direction: column;
-    border: 4px solid #fd7bce;
-    border-radius: 10px; /*  rounded corners */
-    align-items: center;
-    justify-content: center;
-    max-height: 800px;
-    background-color: #fbfffd;
-
-    position: relative;
-
-}
-
-
 .react-tabs__tab-list {
     display: flex;
     list-style: none;
+    padding-left: 10px;
+    padding-top: 0;
+    margin: 0;
 }
 
 .react-tabs__tab {
@@ -181,7 +160,14 @@ label:hover {
 }
 
 .react-tabs__tab {
+    font-family: 'Font', serif;
+    font-style: italic;
+    align-self: center;
+    text-align: center;
+    font-size: 2rem;
+    color: #451eb5;
     border: 1px solid #ffb9e4;
+    border-radius: 10px
 }
 
 ::-webkit-scrollbar {
@@ -241,13 +227,15 @@ button:hover {
     width: 100%;
     height: 100%;
     z-index: 1;
+    border-radius: 3em;
+    box-shadow: 10px 10px 18px -4px #2b2b2b;
+    border-color: white;
 }
 
 .controls-container {
     padding-top: 15px;
     padding-bottom: 15px;
 }
-
 
 .img2 {
     padding-top: 1500px;
