--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,6 +10,12 @@ body {
     padding-bottom: 100px;
 }
 
+.dark-mode {
+    background-color: black;
+    color: white;
+}
+
+
 .grid-container {
     margin-left: 50px;
     margin-right: 50px;
@@ -23,7 +29,6 @@ h1 {
     font-style: italic;
     align-self: center;
     text-align: center;
-    color: #ff8fd1;
 }
 
 input[type="file"] {
@@ -83,9 +88,9 @@ label:hover {
 .header-container h1 {
     font-size: 10rem;
     margin: 0;
-    color: #ffb9e4;
     animation: light-reflection 1s linear infinite;
     animation-direction: alternate;
+    color: #ffb9e4;
 }
 
 @keyframes light-reflection {
@@ -202,6 +207,10 @@ button {
     box-shadow: 6px 8px 8px -4px lightblue;
     border-color: white;
 }
+.dark-btn {
+    background-color: #333;
+    color: #941e1e;
+}
 
 button:hover {
     background: #ff68c5;
@@ -241,14 +250,12 @@ button:hover {
     width: 100%;
     height: 100%;
     z-index: 1;
+    border-radius: 3em;
+    box-shadow: 10px 10px 18px -4px #2b2b2b;
+    border-color: white;
 }
 
 .controls-container {
     padding-top: 15px;
     padding-bottom: 15px;
-}
-
-
-.img2 {
-    padding-top: 1500px;
 }
