--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,14 +10,6 @@ body {
     padding-bottom: 100px;
 }
 
-.grid-container {
-    margin-left: 50px;
-    margin-right: 50px;
-    display: grid;
-    grid-template-columns: 70% 30%; /* 70% for left-side, 30% for right-side */
-    align-items: flex-start;
-}
-
 h1 {
     font-family: 'Font', serif;
     font-style: italic;
@@ -36,21 +28,20 @@ label {
     background: #ffb9e4;
     padding: 8px;
     border-radius: 10px;
-    box-shadow: 6px 8px 8px -4px lightblue;
+    box-shadow: 1px 1px 6px lightblue;
 }
 
 label:hover {
-    background: #ff68c5;
+    background: #ff8fd1;
 }
 
-
-.timeline {
-    width: 100%; /* Set the width of the element to fill its parent container */
-    height: 40px; /* Set the height of the element */
-    background-color: #ffc5e7; /* Set a background color for the element */
-    overflow: auto; /* Set the overflow property to 'auto' to enable scrolling */
-    position: relative; /* Set the position property to 'relative' */
-}
+/*.timeline {*/
+/*    width: 100%; !* Set the width of the element to fill its parent container *!*/
+/*    height: 40px; !* Set the height of the element *!*/
+/*    background-color: #ffc5e7; !* Set a background color for the element *!*/
+/*    overflow: auto; !* Set the overflow property to 'auto' to enable scrolling *!*/
+/*    position: relative; !* Set the position property to 'relative' *!*/
+/*}*/
 
 .progress-line {
     position: absolute;
@@ -70,7 +61,6 @@ label:hover {
     border: 1px solid #ccc;
     text-align: center;
 }
-
 
 .header-container {
     width: 100%;
@@ -97,14 +87,6 @@ label:hover {
     }
 }
 
-.left-side {
-    grid-column: 1 / 2; /* spans the first column */
-}
-
-.right-side {
-    grid-column: 2 / 3; /* spans the second column */
-}
-
 .video {
     width: 100%;
     height: 100%;
@@ -118,15 +100,15 @@ label:hover {
     float: left;
 }
 
-.gifs-container, .pngs-container {
-    padding-left: 50px;
-    padding-right: 50px;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    overflow-y: scroll;
-    flex-wrap: wrap;
-}
+/*.gifs-container, .pngs-container {*/
+/*    padding-left: 50px;*/
+/*    padding-right: 50px;*/
+/*    flex-direction: column;*/
+/*    align-items: center;*/
+/*    justify-content: center;*/
+/*    overflow-y: scroll;*/
+/*    flex-wrap: wrap;*/
+/*}*/
 
 .cell {
     max-width: 25%;
@@ -144,31 +126,25 @@ label:hover {
     background-color: #fbfffd;
     align-items: center;
     flex-wrap: wrap;
-    justify-content: center; /*allows elements to wrap onto new lines when the container is not wide enough
-   */
+    justify-content: center; /*allows elements to wrap onto new lines when the container is not wide enough*/
 }
-
 
 .equal-size {
     width: 100%;
     height: 100%;
 }
 
-
 .wrapper-memes-no-scroll {
     display: flex;
     flex-direction: column;
     border: 4px solid #fd7bce;
-    border-radius: 10px; /*  rounded corners */
+    border-radius: 10px;
     align-items: center;
     justify-content: center;
     max-height: 800px;
     background-color: #fbfffd;
-
     position: relative;
-
 }
-
 
 .react-tabs__tab-list {
     display: flex;
@@ -189,7 +165,7 @@ label:hover {
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #ffebf7;
+    background-color: #ffb9e4;
     -webkit-border-radius: 100px;
 }
 
@@ -199,13 +175,44 @@ button {
     background: #ffb9e4;
     padding: 8px 12px;
     border-radius: 10px;
-    box-shadow: 6px 8px 8px -4px lightblue;
-    border-color: white;
+    box-shadow: 1px 1px 6px lightblue;
+    border-style: none;
+    /*border-color: white;*/
 }
 
 button:hover {
-    background: #ff68c5;
+    background: #ff8fd1;
 }
+
+#volumeBar {
+    position: absolute;
+    margin-left: 20px;
+    margin-top: 10px;
+    height: 20px;
+    width: 120px;
+    border-radius: 5px;
+}
+
+input[type='range'] {
+    overflow: hidden;
+    width: 80px;
+    -webkit-appearance: none;
+    background-color: #ffb9e4;
+}
+
+input[type='range']::-webkit-slider-runnable-track {
+    -webkit-appearance: none;
+}
+
+input[type='range']::-webkit-slider-thumb {
+    width: 15px;
+    -webkit-appearance: none;
+    height: 20px;
+    cursor: pointer;
+    background: palegreen;
+    box-shadow: -80px 0 0 80px #ff68c5;
+}
+
 
 .wrapper-video {
     padding-top: 100px;
@@ -241,6 +248,8 @@ button:hover {
     width: 100%;
     height: 100%;
     z-index: 1;
+    border-radius: 4px;
+    box-shadow: 1px 1px 6px lightblue;
 }
 
 .controls-container {
@@ -248,7 +257,70 @@ button:hover {
     padding-bottom: 15px;
 }
 
+canvas {
+    pointer-events: none;
+}
 
-.img2 {
-    padding-top: 1500px;
+/* grid layout */
+
+.grid-container {
+    display: grid;
+    margin-left: 50px;
+    margin-right: 50px;
+    grid-template-columns: 70% 30%;
+    grid-template-areas:
+    "left-element-1 right-element"
+    "left-element-2 right-element";
+}
+
+.left-element-1  {
+    grid-area: left-element-1;
+}
+
+.left-element-2  {
+    grid-area: left-element-2;
+}
+
+.right-element  {
+    grid-area: right-element;
+}
+
+/* timeline */
+
+.vis-item {
+    cursor: pointer;
+}
+
+.vis-item-content {
+    background-color: #ffb9e4;
+    font-size: medium;
+    color: white;
+    font-family: 'Font', serif;
+    border-radius: 5px;
+}
+
+.vis-item.vis-range {
+    border-radius: 5px !important;
+    border-width: 2px;
+    border-color: #ff8fd1;
+}
+
+.vis-background {
+    background-color: white;
+}
+
+.vis-timeline {
+    border: 2px solid #bfbfbf !important;
+    border-radius: 5px;
+}
+
+.vis-custom-time {
+    background-color: #ff8fd1 !important;
+    z-index: 2 !important;
+    width: 3px !important;
+}
+
+.vis-text {
+    font-family: 'Font', serif !important;
+    color: #ff8fd1 !important;
 }
