--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -35,14 +35,6 @@ label:hover {
     background: #ff8fd1;
 }
 
-/*.timeline {*/
-/*    width: 100%; !* Set the width of the element to fill its parent container *!*/
-/*    height: 40px; !* Set the height of the element *!*/
-/*    background-color: #ffc5e7; !* Set a background color for the element *!*/
-/*    overflow: auto; !* Set the overflow property to 'auto' to enable scrolling *!*/
-/*    position: relative; !* Set the position property to 'relative' *!*/
-/*}*/
-
 .progress-line {
     position: absolute;
     top: 0;
@@ -112,7 +104,6 @@ label:hover {
     flex-direction: row;
     border: 4px solid #ffb9e4;
     border-radius: 10px; /*  rounded corners */
-    max-height: 800px;
     background-color: #fbfffd;
     align-items: center;
     flex-wrap: wrap;
@@ -124,17 +115,17 @@ label:hover {
     height: 100%;
 }
 
-.wrapper-memes-no-scroll {
-    display: flex;
-    flex-direction: column;
-    border: 4px solid #fd7bce;
-    border-radius: 10px;
-    align-items: center;
-    justify-content: center;
-    max-height: 800px;
-    background-color: #fbfffd;
-    position: relative;
-}
+/*.wrapper-memes-no-scroll {*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    border: 4px solid #fd7bce;*/
+/*    border-radius: 10px;*/
+/*    align-items: center;*/
+/*    justify-content: center;*/
+/*    max-height: 800px;*/
+/*    background-color: #fbfffd;*/
+/*    position: relative;*/
+/*}*/
 
 ::-webkit-scrollbar {
     width: 10px;
@@ -153,7 +144,6 @@ button {
     border-radius: 10px;
     box-shadow: 1px 1px 6px lightblue;
     border-style: none;
-    /*border-color: white;*/
 }
 
 button:hover {
@@ -188,6 +178,7 @@ input[type='range']::-webkit-slider-thumb {
     background: palegreen;
     box-shadow: -80px 0 0 80px #ff68c5;
 }
+
 
 .wrapper-video {
     padding-top: 100px;
@@ -224,7 +215,7 @@ input[type='range']::-webkit-slider-thumb {
     height: 100%;
     z-index: 1;
     border-radius: 50px;
-    box-shadow: 10px 10px 6px lightblue;
+    box-shadow: 5px 5px 8px lightblue;
 }
 
 .controls-container {
@@ -299,6 +290,7 @@ canvas {
     font-family: 'Font', serif !important;
     color: #ff8fd1 !important;
 }
+
 
 #hidden {
     visibility: hidden;
